--- a/bower.json
+++ b/bower.json
@@ -3,5 +3,8 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.2.2-nightly-1902"
+  },
+  "dependencies": {
+    "angular-cache": "~4.4.3"
   }
 }
